--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit==1.32.0
+streamlit
 pandas
 numpy
 matplotlib
 yfinance
-tensorflow==2.12.0
 scikit-learn
 xgboost
-joblib
 statsmodels
+joblib
+
